csss path Update

--- a/docs/CSS/question.css
+++ b/docs/CSS/question.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/Img/BG\ grad.png);
+    background-image: url(../Img/BG\ grad.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
